--- a/src/assets/common/scss/settings/_typography.scss
+++ b/src/assets/common/scss/settings/_typography.scss
@@ -29,3 +29,72 @@ $weights: (
     ultra-black : 900,
     extra-ultra : 900
 );
+
+.font-1-12 {
+    font: 400 0.75rem/1.35 "Poppins", sans-serif;
+  }
+  
+  .font-1-16,
+  .font-1-16-sb {
+    font: 400 1rem/1.5 "Poppins", sans-serif;
+  }
+  .font-1-16-sb {
+    font-weight: 600;
+  }
+  
+  .font-1-18,
+  .font-1-sb-18,
+  .font-1-b-18 {
+    font: 400 1.125rem/1.35 "Poppins", sans-serif;
+  }
+  .font-1-sb-18 {
+    font-weight: 600;
+  }
+  .font-1-b-18 {
+    font-weight: 700;
+  }
+  
+  .font-1-24,.font-1-24-sb {
+    font: 400 1.5rem/1.5 "Poppins", sans-serif;
+  }
+  .font-1-24-sb{
+    font-weight: 600;
+  }
+  
+  .font-1-32-sb,
+  .font-1-32-b {
+    font: 600 2rem/1.25 "Poppins", sans-serif;
+  }
+  .font-1-32-b {
+    font-weight: 700;
+  }
+  
+  .font-1-64 {
+    font: 600 4rem/1.125 "Poppins", sans-serif;
+  }
+  
+  @media (max-width: 1200px) {
+    .font-1-32-sb,
+    .font-1-32-b {
+      font-size: 1.75rem;
+    }
+  
+    .font-1-24 {
+      font-size: 1.25rem;
+    }
+  }
+  
+  @media (max-width: 800px) {
+    .font-1-32-sb,
+    .font-1-32-b {
+      font-size: 1.5rem;
+    }
+    .font-1-24 {
+      font-size: 1rem;
+    }
+    .font-1-16,
+    .font-1-16-sb {
+      font-size: 0.75rem;
+    }
+  }
+  
