--- a/src/views/common/html-templates/sub-templates/EnextCommon-Head-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-Head-jvgouvea.html
@@ -1,7 +1,6 @@
-
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <meta name="google-site-verification" content=""/>
-<link rel="shortcut icon" href="/arquivos/favicon.ico" type="image/x-icon"/>
+<link rel="shortcut icon" href="/arquivos/favicon-suits.ico" type="image/x-icon"/>
