--- a/src/views/common/html-templates/EnextCommon-Product-jvgouvea.html
+++ b/src/views/common/html-templates/EnextCommon-Product-jvgouvea.html
@@ -75,7 +75,20 @@
 		</div>
 
 	</div>
+
+	<div class="recomendado container">
+		<h2 class="font-1-32-b cor-p1">Talvez você também goste</h2>
+		<div class="header-prateleira">
+			<vtex:contentPlaceHolder id="Prateleira" />
+		</div>
+		<div class="header-btn-ver-mais">
+			<a class="btn-ver-mais font-1-16-sb" href="#">Ver mais</a>
+		</div>
+	</div>
+
 	<vtex:template id="EnextCommon-Footer-jvgouvea" />
+
+	<vtex:template id="EnextCommon-ScriptsBody-jvgouvea" />
 </body>
 
 </html>
