--- a/src/assets/common/scss/enext-common-globals-jvgouvea.scss
+++ b/src/assets/common/scss/enext-common-globals-jvgouvea.scss
@@ -36,10 +36,12 @@
  */
 @import "./vendor/slick-carousel/_slick-arrows.scss";
 
-/*Product page*/
+// Global
+@import "./global/header.scss";
+@import "./global/footer.scss";
 
-// Footer
-@import "./product-page/product-footer/footer.scss";
+/*Product page*/
+@import "./product-page/vitrine.scss";
 
 // Apagar depois
 @import "./product-page/imagens.scss";
