--- a/src/views/common/html-templates/sub-templates/EnextCommon-Styles-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-Styles-jvgouvea.html
@@ -1,5 +1,5 @@
 <!-- ADICIONE OS ESTILOS EXTERNOS AQUI -->
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" media="all" />
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" media="all" />
 
 <!-- CHAMADA DOS ESTILOS GLOBAIS -->
