--- a/src/assets/common/scss/enext-common-globals-jvgouvea.scss
+++ b/src/assets/common/scss/enext-common-globals-jvgouvea.scss
@@ -41,7 +41,5 @@
 @import "./global/footer.scss";
 
 /*Product page*/
+@import "./product-page/main-product.scss";
 @import "./product-page/vitrine.scss";
-
-// Apagar depois
-@import "./product-page/imagens.scss";
