--- a/src/assets/common/scss/generic/_initialize.scss
+++ b/src/assets/common/scss/generic/_initialize.scss
@@ -6,7 +6,6 @@
  * Normalize.css: http://github.com/necolas/normalize.css
  */
 
-
 // ==========================================================================
 // Config
 // ==========================================================================
@@ -35,7 +34,6 @@ $initialize-heading-margins: null !default;
 $initialize-heading-font-family: null !default;
 $initialize-block-margins: null !default;
 
-
 // ==========================================================================
 // Helpers
 // ==========================================================================
@@ -44,11 +42,10 @@ $initialize-block-margins: null !default;
  * Mixin for optional properties
  */
 @mixin optional-prop($property, $value) {
-    @if $value != null {
-        #{$property}: $value;
-    }
+  @if $value != null {
+    #{$property}: $value;
+  }
 }
-
 
 /* ==========================================================================
    General
@@ -60,31 +57,32 @@ $initialize-block-margins: null !default;
  * 3. Configurable defaults
  */
 html {
-    @include optional-prop('color', $initialize-color);
-    @include optional-prop('box-sizing', $initialize-box-sizing);
+  @include optional-prop("color", $initialize-color);
+  @include optional-prop("box-sizing", $initialize-box-sizing);
 
-    font-family: $initialize-font-family; /* 1 */
-    line-height: $initialize-line-height; /* 3 */
-    font-size: $initialize-font-size; /* 3 */
-    -ms-text-size-adjust: 100%; /* 2 */
-    -webkit-text-size-adjust: 100%; /* 2 */
+  font-family: $initialize-font-family; /* 1 */
+  line-height: $initialize-line-height; /* 3 */
+  font-size: $initialize-font-size; /* 3 */
+  -ms-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
 /**
  * Remove the margin in all browsers
  */
 body {
-    margin: 0;
+  margin: 0;
 }
 /**
  * Inheriting box-sizing
  * https://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/
  */
 
-*, *:before, *:after {
-    box-sizing: inherit;
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
-
 
 /* ==========================================================================
    HTML5 display defenitions
@@ -96,7 +94,7 @@ body {
  * 2. Add the correct display in IE.
  */
 @if $initialize-dinosaur-mode == true {
-    article,
+  article,
     aside,
     details, /* 1 */
     figcaption,
@@ -109,41 +107,41 @@ body {
     nav,
     section,
     summary /* 1 */ {
-        display: block;
-    }
+    display: block;
+  }
 } @else {
-    details, /* 1 */
+  details, /* 1 */
     main,  /* 2 */
     summary /* 1 */ {
-        display: block;
-    }
+    display: block;
+  }
 }
 
 @if $initialize-dinosaur-mode == true {
-    /**
+  /**
      * Add the correct display in IE 9-.
      */
-    audio,
-    canvas,
-    progress,
-    video {
-        display: inline-block;
-    }
+  audio,
+  canvas,
+  progress,
+  video {
+    display: inline-block;
+  }
 }
 
 /**
  * Add the correct display in iOS 4-7.
  */
 audio:not([controls]) {
-    display: none;
-    height: 0;
+  display: none;
+  height: 0;
 }
 
 /**
  * Add the correct vertical alignment in Chrome, Firefox, and Opera.
  */
 progress {
-    vertical-align: baseline;
+  vertical-align: baseline;
 }
 
 /**
@@ -152,9 +150,8 @@ progress {
  */
 template, /* 1 */
 [hidden] {
-    display: none;
+  display: none;
 }
-
 
 /* ==========================================================================
    Links
@@ -165,10 +162,10 @@ template, /* 1 */
  * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
  */
 a {
-    @if $initialize-dinosaur-mode == true {
-        background-color: transparent; /* 1 */
-    }
-    -webkit-text-decoration-skip: objects; /* 2 */
+  @if $initialize-dinosaur-mode == true {
+    background-color: transparent; /* 1 */
+  }
+  -webkit-text-decoration-skip: objects; /* 2 */
 }
 
 /**
@@ -177,9 +174,8 @@ a {
  */
 a:active,
 a:hover {
-    outline-width: 0;
+  outline-width: 0;
 }
-
 
 /* ==========================================================================
    Text-level semantics
@@ -190,9 +186,9 @@ a:hover {
  * 2. Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
  */
 abbr[title] {
-    border-bottom: none; /* 1 */
-    text-decoration: underline; /* 2 */
-    text-decoration: underline dotted; /* 2 */
+  border-bottom: none; /* 1 */
+  text-decoration: underline; /* 2 */
+  text-decoration: underline dotted; /* 2 */
 }
 
 /**
@@ -200,7 +196,7 @@ abbr[title] {
  */
 b,
 strong {
-    font-weight: inherit;
+  font-weight: inherit;
 }
 
 /**
@@ -208,14 +204,14 @@ strong {
  */
 b,
 strong {
-    font-weight: bolder;
+  font-weight: bolder;
 }
 
 /**
  * Add the correct font style in Android 4.3-.
  */
 dfn {
-    font-style: italic;
+  font-style: italic;
 }
 
 /**
@@ -228,21 +224,20 @@ dfn {
 // }
 
 @if $initialize-dinosaur-mode == true {
-    /**
+  /**
     * Address styling not present in IE 8/9.
     */
-    mark {
-        background: #ff0;
-        color: #000;
-    }
+  mark {
+    background: #ff0;
+    color: #000;
+  }
 }
-
 
 /**
  * Add the correct font size in all browsers.
  */
 small {
-    font-size: 80%;
+  font-size: 80%;
 }
 
 /**
@@ -251,41 +246,39 @@ small {
  */
 sub,
 sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline;
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
 }
 
 sub {
-    bottom: -0.25em;
+  bottom: -0.25em;
 }
 
 sup {
-    top: -0.5em;
+  top: -0.5em;
 }
-
 
 /* ==========================================================================
    Embedded content
    ========================================================================== */
 
 @if $initialize-dinosaur-mode == true {
-    /**
+  /**
      * Remove the border on images inside links in IE 10-.
      */
-    img {
-        border-style: none;
-    }
+  img {
+    border-style: none;
+  }
 }
 
 /**
  * Hide the overflow in IE.
  */
 svg:not(:root) {
-    overflow: hidden;
+  overflow: hidden;
 }
-
 
 /* ==========================================================================
    Grouping content
@@ -299,15 +292,15 @@ code,
 kbd,
 pre,
 samp {
-    font-family: monospace, monospace; /* 1 */
-    font-size: 1em; /* 2 */
+  font-family: monospace, monospace; /* 1 */
+  font-size: 1em; /* 2 */
 }
 
 /**
  * Add the correct margin in IE 8.
  */
 figure {
-    margin: 1em 40px;
+  margin: 1em 40px;
 }
 
 /**
@@ -315,11 +308,10 @@ figure {
  * 2. Show the overflow in Edge and IE.
  */
 hr {
-    box-sizing: content-box; /* 1 */
-    height: 0; /* 1 */
-    overflow: visible; /* 2 */
+  box-sizing: content-box; /* 1 */
+  height: 0; /* 1 */
+  overflow: visible; /* 2 */
 }
-
 
 /* ==========================================================================
    Forms
@@ -333,15 +325,15 @@ button,
 input,
 select,
 textarea {
-    font: inherit; /* 1 */
-    margin: 0; /* 2 */
+  font: inherit; /* 1 */
+  margin: 0; /* 2 */
 }
 
 /**
  * Restore the font weight unset by the previous rule.
  */
 optgroup {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 /**
@@ -349,8 +341,9 @@ optgroup {
  * 1. Show the overflow in Edge.
  */
 button,
-input { /* 1 */
-    overflow: visible;
+input {
+  /* 1 */
+  overflow: visible;
 }
 
 /**
@@ -358,8 +351,9 @@ input { /* 1 */
  * 1. Remove the inheritance of text transform in Firefox.
  */
 button,
-select { /* 1 */
-    text-transform: none;
+select {
+  /* 1 */
+  text-transform: none;
 }
 
 /**
@@ -371,7 +365,7 @@ button,
 html [type="button"], /* 1 */
 [type="reset"],
 [type="submit"] {
-    -webkit-appearance: button; /* 2 */
+  -webkit-appearance: button; /* 2 */
 }
 
 /**
@@ -381,8 +375,8 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-    border-style: none;
-    padding: 0;
+  border-style: none;
+  padding: 0;
 }
 
 /**
@@ -392,18 +386,18 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-    outline: 1px dotted ButtonText;
+  outline: 1px dotted ButtonText;
 }
 
 @if $initialize-html5-boilerplate-overwrites == false {
-    /**
+  /**
      * Change the border, margin, and padding in all browsers (opinionated).
      */
-    fieldset {
-        // border: 1px solid #c0c0c0;
-        // margin: 0 2px;
-        // padding: 0.35em 0.625em 0.75em;
-    }
+  fieldset {
+    // border: 1px solid #c0c0c0;
+    // margin: 0 2px;
+    // padding: 0.35em 0.625em 0.75em;
+  }
 }
 
 /**
@@ -413,31 +407,31 @@ button:-moz-focusring,
  *    `fieldset` elements in all browsers.
  */
 legend {
-    box-sizing: border-box; /* 1 */
-    color: inherit; /* 2 */
-    display: table; /* 1 */
-    max-width: 100%; /* 1 */
-    padding: 0; /* 3 */
-    white-space: normal; /* 1 */
+  box-sizing: border-box; /* 1 */
+  color: inherit; /* 2 */
+  display: table; /* 1 */
+  max-width: 100%; /* 1 */
+  padding: 0; /* 3 */
+  white-space: normal; /* 1 */
 }
 
 /**
  * Remove the default vertical scrollbar in IE.
  */
 textarea {
-    overflow: auto;
+  overflow: auto;
 }
 
 @if $initialize-dinosaur-mode == true {
-    /**
+  /**
      * 1. Add the correct box sizing in IE 10-.
      * 2. Remove the padding in IE 10-.
      */
-    [type="checkbox"],
-    [type="radio"] {
-        box-sizing: border-box; /* 1 */
-        padding: 0; /* 2 */
-    }
+  [type="checkbox"],
+  [type="radio"] {
+    box-sizing: border-box; /* 1 */
+    padding: 0; /* 2 */
+  }
 }
 
 /**
@@ -445,7 +439,7 @@ textarea {
  */
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-    height: auto;
+  height: auto;
 }
 
 /**
@@ -453,8 +447,8 @@ textarea {
  * 2. Correct the outline style in Safari.
  */
 [type="search"] {
-    -webkit-appearance: textfield; /* 1 */
-    outline-offset: -2px; /* 2 */
+  -webkit-appearance: textfield; /* 1 */
+  outline-offset: -2px; /* 2 */
 }
 
 /**
@@ -462,15 +456,15 @@ textarea {
  */
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 /**
  * Correct the text style of placeholders in Chrome, Edge, and Safari.
  */
 ::-webkit-input-placeholder {
-    color: inherit;
-    opacity: 0.54;
+  color: inherit;
+  opacity: 0.54;
 }
 
 /**
@@ -478,72 +472,69 @@ textarea {
  * 2. Change font properties to `inherit` in Safari.
  */
 ::-webkit-file-upload-button {
-    -webkit-appearance: button; /* 1 */
-    font: inherit; /* 2 */
+  -webkit-appearance: button; /* 1 */
+  font: inherit; /* 2 */
 }
 
-
-
 @if $initialize-html5-boilerplate-overwrites == true {
-    /* ==========================================================================
+  /* ==========================================================================
        HTML5 Boilerplate optimizations
        ========================================================================== */
 
-    /**
+  /**
      * Remove text-shadow in selection highlight:
      * https://twitter.com/miketaylr/status/12228805301
      *
      * These selection rule sets have to be separate.
      * Customize the background color to match your design.
      */
-    ::selection {
-        background: #b3d4fc;
-        text-shadow: none;
-    }
+  ::selection {
+    background: #b3d4fc;
+    text-shadow: none;
+  }
 
-    /**
+  /**
      * A better looking default horizontal rule
      */
-    hr {
-        display: block;
-        height: 1px;
-        border: 0;
-        border-top: 1px solid #ccc;
-        margin: 1em 0;
-        padding: 0;
-    }
+  hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #ccc;
+    margin: 1em 0;
+    padding: 0;
+  }
 
-    /**
+  /**
      * Remove the gap between audio, canvas, iframes,
      * images, videos and the bottom of their containers:
      * https://github.com/h5bp/html5-boilerplate/issues/440
      */
-    audio,
-    canvas,
-    iframe,
-    img,
-    svg,
-    video {
-        vertical-align: middle;
-    }
+  audio,
+  canvas,
+  iframe,
+  img,
+  svg,
+  video {
+    vertical-align: middle;
+  }
 
-    /**
+  /**
      * Remove default fieldset styles.
      */
-    fieldset {
-        border: 0;
-        margin: 0;
-        padding: 0;
-    }
+  fieldset {
+    border: 0;
+    margin: 0;
+    padding: 0;
+  }
 
-    /**
+  /**
      * Allow only vertical resizing of textareas.
      */
-    textarea {
-        resize: vertical;
-    }
+  textarea {
+    resize: vertical;
+  }
 }
-
 
 /* ==========================================================================
    Optional configurations
@@ -552,88 +543,102 @@ textarea {
 /**
  * Headings
  */
-h1, h2, h3, h4, h5, h6 {
-    @include optional-prop('color', $initialize-heading-color);
-    @include optional-prop('margin', $initialize-heading-margins);
-    @include optional-prop('font-family', $initialize-heading-font-family);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @include optional-prop("color", $initialize-heading-color);
+  @include optional-prop("margin", $initialize-heading-margins);
+  @include optional-prop("font-family", $initialize-heading-font-family);
 }
 
 /**
  * Block elements
  */
-p, table, ul, ol, fieldset, blockquote, dl {
-    @include optional-prop('margin', $initialize-block-margins);
+p,
+table,
+ul,
+ol,
+fieldset,
+blockquote,
+dl {
+  @include optional-prop("margin", $initialize-block-margins);
 }
-
 
 /* ==========================================================================
    Print styles
    ========================================================================== */
 
 @if $initialize-print-styles == true {
-    @media print {
-        *,
-        *:before,
-        *:after,
-        *:first-letter,
-        *:first-line {
-            background: transparent !important;
-            color: #000 !important; // Black prints faster: http://www.sanbeiji.com/archives/953
-            box-shadow: none !important;
-            text-shadow: none !important;
-        }
-
-        a,
-        a:visited {
-            text-decoration: underline;
-        }
-
-        a[href]:after {
-            content: " (" attr(href) ")";
-        }
-
-        abbr[title]:after {
-            content: " (" attr(title) ")";
-        }
-
-        // Don't show links that are fragment identifiers,
-        // or use the `javascript:` pseudo protocol
-        a[href^="#"]:after,
-        a[href^="javascript:"]:after {
-            content: "";
-        }
-
-        pre,
-        blockquote {
-            border: 1px solid #999;
-            page-break-inside: avoid;
-        }
-
-        // Printing Tables:
-        // http://css-discuss.incutio.com/wiki/Printing_Tables
-        thead {
-            display: table-header-group;
-        }
-
-        tr,
-        img {
-            page-break-inside: avoid;
-        }
-
-        img {
-            max-width: 100% !important;
-        }
-
-        p,
-        h2,
-        h3 {
-            orphans: 3;
-            widows: 3;
-        }
-
-        h2,
-        h3 {
-            page-break-after: avoid;
-        }
+  @media print {
+    *,
+    *:before,
+    *:after,
+    *:first-letter,
+    *:first-line {
+      background: transparent !important;
+      color: #000 !important; // Black prints faster: http://www.sanbeiji.com/archives/953
+      box-shadow: none !important;
+      text-shadow: none !important;
     }
+
+    a,
+    a:visited {
+      text-decoration: underline;
+    }
+
+    a[href]:after {
+      content: " (" attr(href) ")";
+    }
+
+    abbr[title]:after {
+      content: " (" attr(title) ")";
+    }
+
+    // Don't show links that are fragment identifiers,
+    // or use the `javascript:` pseudo protocol
+    a[href^="#"]:after,
+    a[href^="javascript:"]:after {
+      content: "";
+    }
+
+    pre,
+    blockquote {
+      border: 1px solid #999;
+      page-break-inside: avoid;
+    }
+
+    // Printing Tables:
+    // http://css-discuss.incutio.com/wiki/Printing_Tables
+    thead {
+      display: table-header-group;
+    }
+
+    tr,
+    img {
+      page-break-inside: avoid;
+    }
+
+    img {
+      max-width: 100% !important;
+    }
+
+    p,
+    h2,
+    h3 {
+      orphans: 3;
+      widows: 3;
+    }
+
+    h2,
+    h3 {
+      page-break-after: avoid;
+    }
+  }
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
 }
