--- a/src/assets/common/scss/product-page/_main-product.scss
+++ b/src/assets/common/scss/product-page/_main-product.scss
@@ -9,6 +9,7 @@
   }
 
   .thumbs {
+    padding: 0 35px; //apagar dps ou nao
     display: grid;
     grid-template-columns: repeat(4, 1fr);
   }
@@ -18,6 +19,7 @@
     font-size: 14px;
     color: var(--cor-8);
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     margin-bottom: 30px;
     li + li:before {
@@ -52,6 +54,73 @@
         background-color: var(--cor-3);
         margin-bottom: 20px;
       }
+    }
+  }
+
+  .sku-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 40px;
+    .produto-quantidade {
+      span {
+        display: block;
+        margin-bottom: 8px;
+        font-weight: 500;
+      }
+      input,
+      button {
+        padding: 8px;
+        text-align: center;
+        border: none;
+        border: 1px solid var(--cor-4);
+      }
+      button {
+        cursor: pointer;
+        border-radius: 4px;
+        background-color: var(--cor-1);
+        width: 35px;
+      }
+      input {
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 500;
+        width: 65px;
+        margin: 0 4px;
+      }
+    }
+  }
+
+  .skuSelector {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    h3 {
+      font-family: "Poppins", sans-serif;
+      font-weight: 500;
+      font-size: 12px;
+    }
+    select {
+      padding: 8px;
+      cursor: pointer;
+      border: 1px solid var(--cor-4);
+      width: 100px;
+    }
+  }
+}
+
+.produto-comprar {
+  .comprar {
+    padding: 16px 32px;
+    background-color: var(--cor-p1);
+    border-radius: 4px;
+    margin-top: 30px;
+    max-width: max-content;
+    text-align: center;
+    margin-bottom: 30px;
+    transition: 0.3s;
+    border: none;
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.1);
     }
   }
 }
