--- a/src/assets/common/scss/generic/_initialize.scss
+++ b/src/assets/common/scss/generic/_initialize.scss
@@ -640,5 +640,9 @@ dl {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
+}
+
+input {
+  font-family: Arial, Helvetica, sans-serif;
 }
