--- a/src/views/common/html-templates/EnextCommon-Product-jvgouvea.html
+++ b/src/views/common/html-templates/EnextCommon-Product-jvgouvea.html
@@ -60,6 +60,19 @@
         <button  class="font-1-b-18 cor-0 comprar addToCart">ADICIONE AO CARRINHO</button>
       </div>
 
+			<div class="produto-frete">
+        <h4 class="font-1-16">Calcular frete e prazo</h4>
+        <div>
+          <input type="text" placeholder="00000-000" />
+          <button type="submit">OK</button>
+          <a class="cor-p2 naosei-cep" href="https://buscacepinter.correios.com.br/app/endereco/index.php" target="_blank">Não sei o CEP</a>
+        </div>
+      </div>
+			
+      <div class="frete-informacoes">
+
+      </div>
+
 		</div>
 
 		<!--  Controle: descricao do produto -->
