--- a/src/assets/common/scss/product-page/_main-product.scss
+++ b/src/assets/common/scss/product-page/_main-product.scss
@@ -36,8 +36,24 @@
     margin-bottom: 30px;
   }
 
+  .valor-por{
+    font-style: normal;
+  }
+
+  .valor-dividido {
+    font-style: normal;
+    font-size: 22px;
+    color: var(--cor-7);
+    span{
+      font-weight: normal;
+    }
+    strong{
+      font-weight: normal;
+    }
+  }
+
   #productDescription {
-    grid-column: span 2;
+    grid-column: 1/-1;
     max-width: 62ch;
     font-family: "Poppins", sans-serif;
     font-size: 16px;
@@ -49,7 +65,7 @@
       &::before {
         content: "";
         display: block;
-        height: 3px;
+        height: 2px;
         width: 100%;
         background-color: var(--cor-3);
         margin-bottom: 20px;
@@ -60,7 +76,8 @@
   .sku-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 40px;
+    flex-direction: column;
+    gap: 10px;
     .produto-quantidade {
       span {
         display: block;
@@ -125,8 +142,48 @@
   }
 }
 
+.produto-frete {
+  &::before {
+    content: "";
+    display: block;
+    width: 400px;
+    height: 2px;
+    background-color: var(--cor-3);
+    margin-bottom: 20px;
+  }
+  div {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 4px;
+  }
+  input {
+    margin: 15px 0;
+    padding: 12px;
+    border: 1px solid var(--cor-3);
+    border-radius: 4px;
+  }
+  button {
+    cursor: pointer;
+    padding: 12px;
+    border-radius: 4px;
+    border: 1px solid var(--cor-3);
+    background-color: var(--cor-1);
+  }
+}
+
+.naosei-cep {
+  max-width: max-content;
+  margin-left: 20px;
+}
+
 @media (max-width: 800px) {
   .main-product {
     padding-top: 220px;
+    grid-template-columns: 1fr;
+  }
+
+  .comprar {
+    padding: 16px;
   }
 }
