--- a/src/views/common/html-templates/EnextCommon-Product-jvgouvea.html
+++ b/src/views/common/html-templates/EnextCommon-Product-jvgouvea.html
@@ -63,8 +63,10 @@
 			<div class="produto-frete">
         <h4 class="font-1-16">Calcular frete e prazo</h4>
         <div>
-          <input type="text" placeholder="00000-000" />
-          <button type="submit">OK</button>
+          <div class="header-frete">
+						<input type="text" placeholder="00000-000" />
+						<button type="submit">OK</button>
+					</div>
           <a class="cor-p2 naosei-cep" href="https://buscacepinter.correios.com.br/app/endereco/index.php" target="_blank">Não sei o CEP</a>
         </div>
       </div>
