add shopping cart

--- a/src/views/common/html-templates/sub-templates/EnextCommon-Header-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-Header-jvgouvea.html
@@ -42,7 +42,7 @@
     <div>
       <ul class="header-buttons">
         <li class="user-button"><button><i class="fa-regular fa-user fa-xl"></i></button></li>
-        <li class="cart-button"><button><i class="fa-solid fa-cart-shopping fa-xl"></i></button></li>
+        <li class="cart-button"><button><span id="cart-length"></span><i class="fa-solid fa-cart-shopping fa-xl"></i></button></li>
         <li class="search"><input type="text" placeholder="Pesquisar" /> <button><i class="fa-solid fa-magnifying-glass fa-lg"></i></button></li>
         <li>
           <button aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
