--- a/src/assets/common/scss/global/_header.scss
+++ b/src/assets/common/scss/global/_header.scss
@@ -364,6 +364,10 @@
   padding: 14px;
   text-align: center;
   color: var(--cor-0);
+  h3{
+    font-weight: bold;
+    font-size: 20px;
+  }
 }
 
 .shopping-item {
@@ -423,7 +427,7 @@
 }
 
 .trash {
-  max-width: 24px;
+  max-width:40px;
   cursor: pointer;
   padding: 8px;
 }
@@ -469,10 +473,10 @@
   text-align: center;
   z-index: 1;
   position: absolute;
-  right: 30px;
-  top: 20px;
+  right: 5px;
+  top: -25px;
   background-color: var(--cor-p1);
-  padding: 4px 6px;
+  padding: 3px 8px;
   border-radius: 50%;
   color: var(--cor-0);
   font-weight: bold;
@@ -480,8 +484,8 @@
 
 @media (max-width: 800px) {
   #cart-length {
-    right: 60px;
-    top: 10px;
+    right: 40px;
+    top: -20px;
   }
 }
 @media (max-width: 350px) {
