--- a/src/assets/common/scss/product-page/_main-product.scss
+++ b/src/assets/common/scss/product-page/_main-product.scss
@@ -121,6 +121,10 @@
       border: 1px solid var(--cor-4);
       width: 100px;
     }
+    #tamanho {
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 500;
+    }
   }
 }
 
@@ -178,7 +182,7 @@
 }
 
 @media (max-width: 800px) {
-  #content{
+  #content {
     margin-top: 40px;
   }
   .produto-frete div {
@@ -221,8 +225,9 @@
   }
 }
 
-@media(max-width:340px){
-  .produto-frete button,.produto-frete input{
+@media (max-width: 340px) {
+  .produto-frete button,
+  .produto-frete input {
     padding: 6px;
   }
 }
