--- a/src/views/common/html-templates/sub-templates/EnextCommon-Scripts-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-Scripts-jvgouvea.html
@@ -1,3 +1,4 @@
 <!-- ADICIONE OS SCRIPTS EXTERNOS AQUI -->
 <script src="https://kit.fontawesome.com/2bccdd6973.js" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
