--- a/src/views/common/html-templates/sub-templates/EnextCommon-ScriptsBody-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-ScriptsBody-jvgouvea.html
@@ -1,4 +1,5 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="sweetalert2.min.js"></script>
 
 <!-- CHAMADA DOS SCRIPTS GLOBAIS -->
 <script type="module" src="/arquivos/enext-common-globals-jvgouvea.js"></script>
