--- a/src/assets/common/scss/product-page/_main-product.scss
+++ b/src/assets/common/scss/product-page/_main-product.scss
@@ -4,17 +4,17 @@
   grid-template-columns: 1fr 1fr;
   gap: 20px;
 
-  #product-img{
+  #product-img {
     display: flex;
     flex-direction: column;
     gap: 15px;
   }
 
-  .product-img-list{
+  .product-img-list {
     padding: 0 5%;
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    li{
+    grid-template-columns: repeat(4, 1fr);
+    li {
       cursor: pointer;
     }
   }
@@ -29,7 +29,7 @@
     margin-bottom: 30px;
     li + li:before {
       content: ">";
-      margin: 0 10px;
+      margin: 0 5px;
     }
   }
 
@@ -133,21 +133,19 @@
   }
 }
 
-.produto-comprar {
-  .comprar {
-    padding: 16px 32px;
-    background-color: var(--cor-p1);
-    border-radius: 4px;
-    margin-top: 30px;
-    max-width: max-content;
-    text-align: center;
-    margin-bottom: 30px;
-    transition: 0.3s;
-    border: none;
-    cursor: pointer;
-    &:hover {
-      transform: scale(1.1);
-    }
+.comprar {
+  padding: 16px 32px;
+  background-color: var(--cor-p1);
+  border-radius: 4px;
+  margin-top: 30px;
+  max-width: max-content;
+  text-align: center;
+  margin-bottom: 30px;
+  transition: 0.3s;
+  border: none;
+  cursor: pointer;
+  &:hover {
+    transform: scale(1.1);
   }
 }
 
@@ -211,10 +209,6 @@
     padding-top: 220px;
     grid-template-columns: 1fr;
   }
-
-  .comprar {
-    padding: 16px;
-  }
 }
 
 @media (max-width: 500px) {
@@ -227,6 +221,9 @@
   }
   .valor-dividido {
     font-size: 22px;
+  }
+  .comprar {
+    padding: 16px;
   }
 }
 
