add footer sobre

--- a/src/views/common/html-templates/sub-templates/EnextCommon-Footer-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-Footer-jvgouvea.html
@@ -3,7 +3,7 @@
 
     <div class="footer-sobre">
       <h2 class="font-1-b-18">Suits</h2>
-        <p class="font-1-16">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, magnam animi tempore earum libero laboriosam odit vel deserunt, laudantium repellat, officiis in! Consequuntur ratione deleniti nisi maiores aperiam impedit voluptas.</p>
+        <p class="font-1-16">A Suits tem uma cultura corporativa sólida e uma gestão voltada para o encantamento, que procura superar as expectativas dos clientes. Buscamos organizar as coleções por estilos de vida, entendendo que mais do que seguir tendências de moda, é preciso respeitar a diversidade de ser e de viver de cada um.</p>
         <div>
           <ul class="footer-redes">
             <li><a href="javascript:void(0);"><i class="fa-brands fa-facebook-square fa-2xl"></i></a></li>
