--- a/src/views/common/html-templates/sub-templates/EnextCommon-ScriptsBody-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-ScriptsBody-jvgouvea.html
@@ -1,5 +1,6 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="sweetalert2.min.js"></script>
+<script src="//io.vtex.com.br/vtex.js/2.0.0/vtex.min.js"></script>
 
 <!-- CHAMADA DOS SCRIPTS GLOBAIS -->
 <script type="module" src="/arquivos/enext-common-globals-jvgouvea.js"></script>
