--- a/src/views/common/html-templates/sub-templates/EnextCommon-Header-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-Header-jvgouvea.html
@@ -3,7 +3,7 @@
     <p class="header-topo font-1-12">Ganhe 15% OFF na primeira compra</p>
   </div>
   <div class="header-container container">
-    <h2 class="font-1-32-b cor-12"><a href="#">Suits</a></h2>
+    <h2 class="font-1-32-b cor-12"><a href="https://enext.vtexlocal.com.br:3000/?lid=2c8ad4e6-1d5f-43fd-9106-73adbc0bb3bc#">Suits</a></h2>
     <nav id="nav">
       <ul class="header-menu">
         <li class="roupas">
