--- a/src/assets/common/scss/enext-common-globals-jvgouvea.scss
+++ b/src/assets/common/scss/enext-common-globals-jvgouvea.scss
@@ -40,6 +40,10 @@
 @import "./global/header.scss";
 @import "./global/footer.scss";
 
+// Home page
+@import "./home-page/banner-principal.scss";
+@import "./home-page/banner-secundario.scss";
+
 /*Product page*/
 @import "./product-page/main-product.scss";
 @import "./product-page/vitrine.scss";
