feat categorias recomendadas

--- a/src/assets/common/scss/enext-common-globals-jvgouvea.scss
+++ b/src/assets/common/scss/enext-common-globals-jvgouvea.scss
@@ -43,6 +43,7 @@
 // Home page
 @import "./home-page/banner-principal.scss";
 @import "./home-page/banner-secundario.scss";
+@import "./home-page/categorias-recomendado.scss";
 
 /*Product page*/
 @import "./product-page/main-product.scss";
