--- a/src/assets/common/scss/home-page/_banner-principal.scss
+++ b/src/assets/common/scss/home-page/_banner-principal.scss
@@ -2,15 +2,17 @@
   margin: 20px 0;
   margin-top: 100px;
   position: relative;
-  img {
-    width: 100%;
-  }
+
   .previous {
     left: 5px;
   }
   .next {
     right: 5px;
   }
+}
+
+#main-slider img {
+  width: 100%;
 }
 
 @media (max-width: 800px) {
