--- a/src/views/common/html-templates/EnextCommon-Home-jvgouvea.html
+++ b/src/views/common/html-templates/EnextCommon-Home-jvgouvea.html
@@ -65,7 +65,25 @@
     </div>
   </section>
 
-	
+	<article class="container recomendado">
+    <h3 class="font-1-32-b">RECOMENDADO PARA VOCÊ</h3>
+    <div class="categorias-recomendadas">
+      <a href="javascript:void(0);" class="categoria-item">
+        <img src="/arquivos/camisas.png" alt="Categoria Camisas" />
+        <h4 class="font-1-b-18">CAMISAS</h4>
+      </a>
+
+      <a href="javascript:void(0);" class="categoria-item">
+        <img src="/arquivos/calcados.png" alt="Categoria Calçados" />
+        <h4 class="font-1-b-18">CALÇADOS</h4>
+      </a>
+
+      <a href="javascript:void(0);" class="categoria-item">
+        <img src="/arquivos/calca.png" alt="Categoria Calças" />
+        <h4 class="font-1-b-18">CALÇAS</h4>
+      </a>
+    </div>
+  </article>
 
 	<vtex:template id="EnextCommon-Footer-jvgouvea" />
 
