--- a/src/assets/common/scss/enext-common-globals-jvgouvea.scss
+++ b/src/assets/common/scss/enext-common-globals-jvgouvea.scss
@@ -44,6 +44,7 @@
 @import "./home-page/banner-principal.scss";
 @import "./home-page/banner-secundario.scss";
 @import "./home-page/categorias-recomendado.scss";
+@import "./home-page/newsletter.scss";
 
 /*Product page*/
 @import "./product-page/main-product.scss";
