--- a/src/views/common/html-templates/EnextCommon-Home-jvgouvea.html
+++ b/src/views/common/html-templates/EnextCommon-Home-jvgouvea.html
@@ -53,37 +53,48 @@
 	</div>
 
 	<section class="banner-secundario-bg">
-    <div class="container banner-secundario">
-      <div class="banner-secundario-conteudo">
-        <h2 class="font-1-32-b cor-0">MODA E ACESSÓRIOS</h2>
-        <h3 class="font-1-32-b cor-12">vem conferir as novidades</h3>
-        <a class="font-1-16-sb" href="#">COMPRAR AGORA</a>
-      </div>
-      <div class="banner-secundario-img">
+		<div class="container banner-secundario">
+			<div class="banner-secundario-conteudo">
+				<h2 class="font-1-32-b cor-0">MODA E ACESSÓRIOS</h2>
+				<h3 class="font-1-32-b cor-12">vem conferir as novidades</h3>
+				<a class="font-1-16-sb" href="#">COMPRAR AGORA</a>
+			</div>
+			<div class="banner-secundario-img">
 				<img src="/arquivos/banner-secundario.png" alt="Homem com jaqueta e calça jeans" />
 			</div>
-    </div>
-  </section>
+		</div>
+	</section>
 
 	<article class="container recomendado">
-    <h3 class="font-1-32-b">RECOMENDADO PARA VOCÊ</h3>
-    <div class="categorias-recomendadas">
-      <a href="javascript:void(0);" class="categoria-item">
-        <img src="/arquivos/camisas.png" alt="Categoria Camisas" />
-        <h4 class="font-1-b-18">CAMISAS</h4>
-      </a>
+		<h3 class="font-1-32-b">RECOMENDADO PARA VOCÊ</h3>
+		<div class="categorias-recomendadas">
+			<a href="javascript:void(0);" class="categoria-item">
+				<img src="/arquivos/camisas.png" alt="Categoria Camisas" />
+				<h4 class="font-1-b-18">CAMISAS</h4>
+			</a>
 
-      <a href="javascript:void(0);" class="categoria-item">
-        <img src="/arquivos/calcados.png" alt="Categoria Calçados" />
-        <h4 class="font-1-b-18">CALÇADOS</h4>
-      </a>
+			<a href="javascript:void(0);" class="categoria-item">
+				<img src="/arquivos/calcados.png" alt="Categoria Calçados" />
+				<h4 class="font-1-b-18">CALÇADOS</h4>
+			</a>
 
-      <a href="javascript:void(0);" class="categoria-item">
-        <img src="/arquivos/calca.png" alt="Categoria Calças" />
-        <h4 class="font-1-b-18">CALÇAS</h4>
-      </a>
-    </div>
-  </article>
+			<a href="javascript:void(0);" class="categoria-item">
+				<img src="/arquivos/calca.png" alt="Categoria Calças" />
+				<h4 class="font-1-b-18">CALÇAS</h4>
+			</a>
+		</div>
+	</article>
+
+	<section class="container newsletter">
+		<div class="newsletter-conteudo">
+			<h1 class="font-1-32-b">SUITS NEWSLETTER</h1>
+			<p class="font-1-16">Receba as últimas notícias da Suits sobre novos produtos, promoções exclusivas, estilo de vida e tendências da moda.</p>
+			<form class="newsletter-input">
+				<input class="font-1-16-sb" type="email" placeholder="SEU EMAIL" />
+				<button class="font-1-16-sb cor-0">INSCREVA-SE</button>
+			</form>
+		</div>
+	</section>
 
 	<vtex:template id="EnextCommon-Footer-jvgouvea" />
 
