feat newsletter sub-template

--- a/src/assets/common/scss/enext-common-globals-jvgouvea.scss
+++ b/src/assets/common/scss/enext-common-globals-jvgouvea.scss
@@ -39,12 +39,12 @@
 // Global
 @import "./global/header.scss";
 @import "./global/footer.scss";
+@import "./global/newsletter.scss";
 
 // Home page
 @import "./home-page/banner-principal.scss";
 @import "./home-page/banner-secundario.scss";
 @import "./home-page/categorias-recomendado.scss";
-@import "./home-page/newsletter.scss";
 
 /*Product page*/
 @import "./product-page/main-product.scss";
