--- a/src/views/common/html-templates/EnextCommon-Home-jvgouvea.html
+++ b/src/views/common/html-templates/EnextCommon-Home-jvgouvea.html
@@ -85,17 +85,8 @@
 		</div>
 	</article>
 
-	<section class="container newsletter">
-		<div class="newsletter-conteudo">
-			<h1 class="font-1-32-b">SUITS NEWSLETTER</h1>
-			<p class="font-1-16">Receba as últimas notícias da Suits sobre novos produtos, promoções exclusivas, estilo de vida e tendências da moda.</p>
-			<form class="newsletter-input">
-				<input class="font-1-16-sb" type="email" placeholder="SEU EMAIL" />
-				<button class="font-1-16-sb cor-0">INSCREVA-SE</button>
-			</form>
-		</div>
-	</section>
-
+	<vtex:template id="EnextCommon-Newsletter-jvgouvea" />
+	
 	<vtex:template id="EnextCommon-Footer-jvgouvea" />
 
 	<vtex:template id="EnextCommon-ScriptsBody-jvgouvea" />
