--- a/src/views/common/html-templates/EnextCommon-Product-jvgouvea.html
+++ b/src/views/common/html-templates/EnextCommon-Product-jvgouvea.html
@@ -103,6 +103,8 @@
 		</div>
 	</div>
 
+	<vtex:template id="EnextCommon-Newsletter-jvgouvea" />
+
 	<vtex:template id="EnextCommon-Footer-jvgouvea" />
 
 	<vtex:template id="EnextCommon-ScriptsBody-jvgouvea" />
