--- a/src/views/common/html-templates/sub-templates/EnextCommon-Footer-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-Footer-jvgouvea.html
@@ -6,10 +6,10 @@
         <p class="font-1-16">A Suits tem uma cultura corporativa sólida e uma gestão voltada para o encantamento, que procura superar as expectativas dos clientes. Buscamos organizar as coleções por estilos de vida, entendendo que mais do que seguir tendências de moda, é preciso respeitar a diversidade de ser e de viver de cada um.</p>
         <div>
           <ul class="footer-redes">
-            <li><a href="javascript:void(0);"><i class="fa-brands fa-facebook-square fa-2xl"></i></a></li>
-            <li><a href="javascript:void(0);"><i class="fa-brands fa-twitter-square fa-2xl"></i></a></li>
-            <li><a href="javascript:void(0);"><i class="fa-brands fa-instagram-square fa-2xl"></i></a></li>
-            <li><a href="javascript:void(0);"><i class="fa-brands fa-linkedin fa-2xl"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-facebook-square fa-2xl"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-twitter-square fa-2xl"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram-square fa-2xl"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a></li>
           </ul>
         </div>
     </div>
@@ -27,9 +27,9 @@
     <div class="footer-suporte">
       <h3 class="font-1-b-18">Suporte</h3>
       <ul class="lista-suporte font-1-16-sb">
-        <li><a href="javascript:void(0);">Política de reembolso</a></li>
-        <li><a href="javascript:void(0);">Termos e Condições</a></li>
-        <li><a href="javascript:void(0);">FAQ</a></li>
+        <li><a href="#">Política de reembolso</a></li>
+        <li><a href="#">Termos e Condições</a></li>
+        <li><a href="#">FAQ</a></li>
       </ul>
     </div>
 
