--- a/src/views/common/html-templates/sub-templates/EnextCommon-Header-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-Header-jvgouvea.html
@@ -56,7 +56,7 @@
       <h1 class="font-1-32">Login</h1>
       <input class="font-1-16" id="usuario" type="text" placeholder="exemplo@email.com" />
       <input class="font-1-16" id="senha" type="password" placeholder="*******" />
-      <button class="font-1-16-sb cor-p4" type="submit">LOGIN</button>
+      <button class="font-1-16-sb cor-0" type="submit">LOGIN</button>
       <p><a class="cor-p2" href="#">Esqueceu a senha?</a></p>
       <p class="register">Não tem uma conta?<a class="cor-p2" href="#">Cadastre-se</a></p>
     </div>
