light house fix

--- a/src/assets/common/scss/product-page/_main-product.scss
+++ b/src/assets/common/scss/product-page/_main-product.scss
@@ -84,7 +84,7 @@
     flex-direction: column;
     gap: 20px;
     .produto-quantidade {
-      span {
+      label {
         display: block;
         margin-bottom: 8px;
         font-weight: 500;
