--- a/src/views/common/html-templates/EnextCommon-Home-jvgouvea.html
+++ b/src/views/common/html-templates/EnextCommon-Home-jvgouvea.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common" xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common" xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce">
 
 <head>
 	<vtex:template id="EnextCommon-Head-jvgouvea" />
@@ -68,17 +68,17 @@
 	<article class="container recomendado">
 		<h3 class="font-1-32-b">RECOMENDADO PARA VOCÊ</h3>
 		<div class="categorias-recomendadas">
-			<a href="javascript:void(0);" class="categoria-item">
+			<a href="#" class="categoria-item">
 				<img src="/arquivos/camisas.png" alt="Categoria Camisas" />
 				<h4 class="font-1-b-18">CAMISAS</h4>
 			</a>
 
-			<a href="javascript:void(0);" class="categoria-item">
+			<a href="#" class="categoria-item">
 				<img src="/arquivos/calcados.png" alt="Categoria Calçados" />
 				<h4 class="font-1-b-18">CALÇADOS</h4>
 			</a>
 
-			<a href="javascript:void(0);" class="categoria-item">
+			<a href="#" class="categoria-item">
 				<img src="/arquivos/calca.png" alt="Categoria Calças" />
 				<h4 class="font-1-b-18">CALÇAS</h4>
 			</a>
