--- a/src/views/common/html-templates/EnextCommon-Product-jvgouvea.html
+++ b/src/views/common/html-templates/EnextCommon-Product-jvgouvea.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common" xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce">
+<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml" xmlns:vtex="http://www.vtex.com.br/2009/vtex-common" xmlns:vtex.cmc="http://www.vtex.com.br/2009/vtex-commerce">
 
 <head>
 	<vtex:template id="EnextCommon-Head-jvgouvea" />
@@ -19,15 +19,15 @@
 
 		<div id="product-img">
 			<div id="product-img-principal">
-				<img src="https://enext.vteximg.com.br/arquivos/ids/155843-660-660/jaqueta1.jpg?v=637904218272500000
+				<img width="660" height ="660" src="https://enext.vteximg.com.br/arquivos/ids/155843-660-660/jaqueta1.jpg?v=637904218272500000
 					" alt="Jaqueta - imagem principal" />
 			</div>
 			<ul class="product-img-list">
-				<li><img src="https://enext.vteximg.com.br/arquivos/ids/155843-660-660/jaqueta1.jpg?v=637904218272500000
+				<li><img width="660" height ="660" src="https://enext.vteximg.com.br/arquivos/ids/155843-660-660/jaqueta1.jpg?v=637904218272500000
 					" alt="Jaqueta - imagem principal" /></li>
-				<li><img src="https://enext.vteximg.com.br/arquivos/ids/155844-660-660/jaqueta3.jpg?v=637904219015500000" alt="Jaqueta - costa" /></li>
-				<li><img src="https://enext.vteximg.com.br/arquivos/ids/155845-660-660/jaqueta4.jpg?v=637904219639170000" alt="Jaqueta - lado" /></li>
-				<li><img src="https://enext.vteximg.com.br/arquivos/ids/155846-660-660/jaqueta2.jpg?v=637904220065070000" alt="Jaqueta - sem modelo" /></li>
+				<li><img width="660" height ="660" src="https://enext.vteximg.com.br/arquivos/ids/155844-660-660/jaqueta3.jpg?v=637904219015500000" alt="Jaqueta - costa" /></li>
+				<li><img width="660" height ="660" src="https://enext.vteximg.com.br/arquivos/ids/155845-660-660/jaqueta4.jpg?v=637904219639170000" alt="Jaqueta - lado" /></li>
+				<li><img width="660" height ="660" src="https://enext.vteximg.com.br/arquivos/ids/155846-660-660/jaqueta2.jpg?v=637904220065070000" alt="Jaqueta - sem modelo" /></li>
 			</ul>
 		</div>
 
@@ -56,13 +56,13 @@
 				</div>
 
 				<div class="produto-quantidade">
-					<span class="font-1-12">Quantidade:</span>
+					<label for="quantidade" class="font-1-12">Quantidade:</label>
 					<button id="menos">-</button>
 					<input id="quantidade" type="number" value="1" />
 					<button id="mais">+</button>
 				</div>
 			</div>
-
+			
 			<div class="produto-comprar">
 				<button class="font-1-b-18 cor-0 comprar addToCart">ADICIONE AO CARRINHO</button>
 			</div>
