--- a/src/views/common/html-templates/sub-templates/EnextCommon-Footer-jvgouvea.html
+++ b/src/views/common/html-templates/sub-templates/EnextCommon-Footer-jvgouvea.html
@@ -6,10 +6,10 @@
         <p class="font-1-16">A Suits tem uma cultura corporativa sólida e uma gestão voltada para o encantamento, que procura superar as expectativas dos clientes. Buscamos organizar as coleções por estilos de vida, entendendo que mais do que seguir tendências de moda, é preciso respeitar a diversidade de ser e de viver de cada um.</p>
         <div>
           <ul class="footer-redes">
-            <li><a href="#"><i class="fa-brands fa-facebook-square fa-2xl"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-twitter-square fa-2xl"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-instagram-square fa-2xl"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a></li>
+            <li><a aria-label="Facebook" href="#"><i class="fa-brands fa-facebook-square fa-2xl"></i></a></li>
+            <li><a aria-label="Twitter" href="#"><i class="fa-brands fa-twitter-square fa-2xl"></i></a></li>
+            <li><a aria-label="Instagram" href="#"><i class="fa-brands fa-instagram-square fa-2xl"></i></a></li>
+            <li><a aria-label="Linkedin" href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a></li>
           </ul>
         </div>
     </div>
