change var colors

--- a/src/assets/common/scss/home-page/_banner-secundario.scss
+++ b/src/assets/common/scss/home-page/_banner-secundario.scss
@@ -1,6 +1,6 @@
 .banner-secundario-bg {
   margin-top: 60px;
-  background-color: var(--cor-p1);
+  background-color: #e74247;
 }
 
 .banner-secundario {
