--- a/src/assets/common/scss/settings/_colors.scss
+++ b/src/assets/common/scss/settings/_colors.scss
@@ -38,9 +38,9 @@ $color-gray-canal	 : #525252;
   --cor-10: #2e2e2e;
   --cor-11: #111111;
   --cor-12: #000000;
-  --cor-p1: #ff5a5f;
-  --cor-p2: #e2494d;
-  --cor-p3: #c24145;
+  --cor-p1: #b11111;
+  --cor-p2: #8f0e0e;
+  --cor-p3: #75161a;
   --cor-p4: #3e2021;
 }
 
