width and height html imgs

--- a/src/views/common/html-templates/EnextCommon-Home-jvgouvea.html
+++ b/src/views/common/html-templates/EnextCommon-Home-jvgouvea.html
@@ -18,24 +18,24 @@
 	<!-- /SubTemplate: header -->
 
 	<main id="main-banner">
-		<img class="previous" src="/arquivos/previous-banner.png" alt="Banner anterior" />
+		<img width="41" height="41" class="previous" src="/arquivos/previous-banner.png" alt="Banner anterior" />
 
 		<div id="main-slider">
 			<a href="#">
 				<picture>
 					<source media="(max-width: 800px)" srcset="/arquivos/banner-mes-responsivo.png" />
-					<img src="/arquivos/banner-mes.png" alt="Banner promoção mês de ofertas" />
+					<img width="1920" height="600" src="/arquivos/banner-mes.png" alt="Banner promoção mês de ofertas" />
 				</picture>
 			</a>
 			<a href="#">
 				<picture>
 					<source media="(max-width: 800px)" srcset="/arquivos/banner-pix-responsivo.png" />
-					<img src="/arquivos/banner-pix.png" alt="Banner promoção pagamento no PIX" />
+					<img width="1920" height="600" src="/arquivos/banner-pix.png" alt="Banner promoção pagamento no PIX" />
 				</picture>
 			</a>
 		</div>
 
-		<img class="next" src="/arquivos/next-banner.png" alt="Proximo Banner" />
+		<img width="41" height="41" class="next" src="/arquivos/next-banner.png" alt="Proximo Banner" />
 	</main>
 
 	<div class="recomendado container">
@@ -60,7 +60,7 @@
 				<a class="font-1-16-sb" href="#">COMPRAR AGORA</a>
 			</div>
 			<div class="banner-secundario-img">
-				<img src="/arquivos/banner-secundario.png" alt="Homem com jaqueta e calça jeans" />
+				<img width="381" height="459" src="/arquivos/banner-secundario.png" alt="Homem com jaqueta e calça jeans" />
 			</div>
 		</div>
 	</section>
@@ -69,17 +69,17 @@
 		<h3 class="font-1-32-b">RECOMENDADO PARA VOCÊ</h3>
 		<div class="categorias-recomendadas">
 			<a href="#" class="categoria-item">
-				<img src="/arquivos/camisas.png" alt="Categoria Camisas" />
+				<img width="275" height="269" src="/arquivos/camisas.png" alt="Categoria Camisas" />
 				<h4 class="font-1-b-18">CAMISAS</h4>
 			</a>
 
 			<a href="#" class="categoria-item">
-				<img src="/arquivos/calcados.png" alt="Categoria Calçados" />
+				<img width="275" height="269" src="/arquivos/calcados.png" alt="Categoria Calçados" />
 				<h4 class="font-1-b-18">CALÇADOS</h4>
 			</a>
 
 			<a href="#" class="categoria-item">
-				<img src="/arquivos/calca.png" alt="Categoria Calças" />
+				<img width="275" height="269" src="/arquivos/calca.png" alt="Categoria Calças" />
 				<h4 class="font-1-b-18">CALÇAS</h4>
 			</a>
 		</div>
